[gd_scene load_steps=14 format=3 uid="uid://dfqpjipvo2q1a"]

[ext_resource type="FontFile" uid="uid://byvaqdf2liiep" path="res://Assets/Fonts/btnFont.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://bhd135ao41ocl" path="res://Assets/Images/bg_underwater.png" id="2"]
[ext_resource type="PackedScene" uid="uid://cujr43bnq6o6h" path="res://Scenes/Options/Options.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://byxg1vidddqdh" path="res://Assets/Images/btn_yellow.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bafkk5ay4xpnw" path="res://Assets/Images/btn_yellow_disabled.png" id="5"]
[ext_resource type="FontFile" uid="uid://b2wbfrap8ifi4" path="res://Assets/Fonts/Marujo.ttf" id="6"]
[ext_resource type="Theme" uid="uid://y1ufudag5d7f" path="res://Assets/InputTheme/input_theme.tres" id="6_m4quj"]
[ext_resource type="Script" uid="uid://ciu8pv80xne2x" path="res://Scenes/MenuPlay/PESCAR/Pescar.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://vg4ldcjv7m84" path="res://Assets/Images/btn_arrow.png" id="8"]
[ext_resource type="AudioStream" uid="uid://rmsb4vmss26n" path="res://Assets/Sounds/menu_play.ogg" id="9"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/75/0/ascent = 0.0
cache/0/75/0/descent = 0.0
cache/0/75/0/underline_position = 0.0
cache/0/75/0/underline_thickness = 0.0
cache/0/75/0/scale = 1.0

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/150/0/ascent = 0.0
cache/0/150/0/descent = 0.0
cache/0/150/0/underline_position = 0.0
cache/0/150/0/underline_thickness = 0.0
cache/0/150/0/scale = 1.0

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/75/0/ascent = 0.0
cache/0/75/0/descent = 0.0
cache/0/75/0/underline_position = 0.0
cache/0/75/0/underline_thickness = 0.0
cache/0/75/0/scale = 1.0

[node name="Pescar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7")

[node name="BgImage" type="Sprite2D" parent="."]
scale = Vector2(1, 1.29286)
texture = ExtResource("2")
centered = false

[node name="PlayerName" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -517.5
offset_right = 517.5
offset_bottom = 101.0
theme = ExtResource("6_m4quj")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource("1")
horizontal_alignment = 1

[node name="GameName" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -517.5
offset_top = -452.5
offset_right = 517.5
offset_bottom = -301.5
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource("5")
theme_override_font_sizes/font_size = 150
text = "CORALIMPIO"
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -739.0
offset_top = -136.5
offset_right = 739.0
offset_bottom = 136.5

[node name="FirstContainer" type="VBoxContainer" parent="ButtonsContainer"]
layout_mode = 2

[node name="FishContainer" type="CenterContainer" parent="ButtonsContainer/FirstContainer"]
layout_mode = 2

[node name="BtnFish" type="TextureButton" parent="ButtonsContainer/FirstContainer/FishContainer"]
layout_mode = 2
texture_normal = ExtResource("4")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")
texture_disabled = ExtResource("5")

[node name="LblFish" type="Label" parent="ButtonsContainer/FirstContainer/FishContainer"]
layout_mode = 2
theme = ExtResource("6_m4quj")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = ExtResource("1")
text = "NIVEL 1"

[node name="SecondContainer" type="VBoxContainer" parent="ButtonsContainer"]
layout_mode = 2

[node name="CleanContainer" type="CenterContainer" parent="ButtonsContainer/SecondContainer"]
layout_mode = 2

[node name="BtnClean" type="TextureButton" parent="ButtonsContainer/SecondContainer/CleanContainer"]
layout_mode = 2
texture_normal = ExtResource("4")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")
texture_disabled = ExtResource("5")

[node name="LblClean" type="Label" parent="ButtonsContainer/SecondContainer/CleanContainer"]
custom_minimum_size = Vector2(350, 150)
layout_mode = 2
theme = ExtResource("6_m4quj")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource("4")
text = "NIVEL 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ThirdContainer" type="VBoxContainer" parent="ButtonsContainer"]
layout_mode = 2

[node name="Container" type="CenterContainer" parent="ButtonsContainer/ThirdContainer"]
layout_mode = 2

[node name="BtnLvl3" type="TextureButton" parent="ButtonsContainer/ThirdContainer/Container"]
layout_mode = 2
texture_normal = ExtResource("4")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")
texture_disabled = ExtResource("5")

[node name="LblLvl3" type="Label" parent="ButtonsContainer/ThirdContainer/Container"]
custom_minimum_size = Vector2(350, 150)
layout_mode = 2
theme = ExtResource("6_m4quj")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource("4")
text = "NIVEL 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnBack" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 255.0
offset_bottom = 273.0
texture_normal = ExtResource("8")

[node name="Options" parent="." instance=ExtResource("3")]

[node name="BGSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9")
volume_db = -10.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="ButtonsContainer/FirstContainer/FishContainer/BtnFish" to="." method="_on_BtnFish_pressed"]
[connection signal="pressed" from="ButtonsContainer/SecondContainer/CleanContainer/BtnClean" to="." method="_on_BtnClean_pressed"]
[connection signal="pressed" from="ButtonsContainer/ThirdContainer/Container/BtnLvl3" to="." method="_on_BtnLvl3_pressed"]
[connection signal="pressed" from="BtnBack" to="." method="_on_BtnBack_pressed"]
